# backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  deploy.sh  docker-compose.yml  postman_collection.json  pyproject.toml  test.db
.github/workflows/: codeql-config.yml  codeql.yml  deploy.yml
.github/workflows/codeql/: codeql-config.yml
alembic/: env.py
alembic/versions/: 1afa124322f5_create_user_and_user_role.py  2b0d1f5e9c11_seed_default_user_roles.py  2bac88545b60_create_password_resets_table.py  45c7be2cf91c_create_user_and_user_role.py  b7c8d9e0f1a2_add_court_information_fields.py  bdfe5e255f47_add_courts_table.py
app/: api.py  main.py
app/core/: config.py  security.py
app/db/: base.py  base_all.py  session.py
app/features/auth/: dependencies.py  errors.py  login.py  models.py  openapi.py  router.py  schemas.py  service.py
app/features/court/: models.py  router.py  schemas.py  service.py
app/features/email/: __init__.py  service.py
app/features/email/templates/: password_reset.html  welcome.html
app/features/ping/: router.py  schemas.py
app/features/user/: models.py  router.py  schemas.py  service.py
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
tests/: conftest.py  test_auth_email.py  test_available_courts.py  test_court.py
