[project]
name = "NP-backend"
version = "0.1.0"
description = "Feature-based FastAPI backend"
authors = [{ name = "Nazvu Prydumayemo" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",               # PostgreSQL async driver
    "alembic>=1.13.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "PyJWT>=2.8.0",
    "types-passlib>=1.7.3",          # Type stubs for passlib
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ----------------------
# RUFF CONFIGURATION
# ----------------------

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "ASYNC",
    "TCH",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------
# MYPY CONFIGURATION
# ----------------------

[tool.mypy]
python_version = "3.11"
# Relax strict mode
strict = false

# Optional individual relaxations
disallow_untyped_defs = false # allow functions without type hints
check_untyped_defs = false    # don’t check inside untyped functions
warn_unused_ignores = false   # don’t warn about # type: ignore
no_implicit_optional = false  # allow Optional without explicit annotation

exclude = ["tests/", "alembic"]


# ----------------------
# PYTEST CONFIGURATION
# ----------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
